# graphql-native

./: README.md  benchmark.js  package.json
native/: Cargo.toml
native/src/: lexer.rs  lib.rs
