[package]
name = "graphql-native"
version = "0.1.0"
authors = ["timkendall <timkendall18@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "graphql_native"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
graphql-parser = "0.3.0"
neon = "0.4.0"
